Changing the Base64 library from sun.misc's to java.util's because sun.misc.* is available only on Sun's JDK